# murphy

./: .gitignore  Makefile.am  README  configure.ac
doc/plugins/resource-dbus/: dbus-api-resource.txt
m4/: websockets.m4
src/: Makefile.am  common-func-info.c  core-func-info.c  dbus-func-info.c
src/common/: dbus.c  hashtbl.c  websocklib.c
src/core/lua-utils/: object.c
src/daemon/: config.c  config.h  daemon.c  murphy.conf
src/murphy-db/mdb/: column.c
src/murphy-db/tests/: check-libmqi.c
src/plugins/: plugin-resource-dbus.c  plugin-test.c
src/plugins/domain-control/: message.c
src/plugins/resource-native/libmurphy-resource/: api_test.c  attribute.c  resource-api.h  resource-fuzz.c  resource.c  rset.c
src/plugins/telephony/: ofono.c  telephony.c  telephony.h
tests/: Makefile.am  dbus_example.py  dbus_first_test.aal  dbus_first_test.conf  externs.txt  libresource_example.py  mrp_dbus.py  mrp_dbus_helpers.py  mrp_libresource_helpers.py  mrp_resource_native.py  mrp_resource_native_helpers.py  mrp_status.py  mrp_unix_sockets.py  mrp_websockets.py  rebuild_api_test.sh  resource-native_example.py  run_multiprotocol_comparison.sh  run_murphyd.sh  runmurphyd.sh  stop_murphyd.sh  test_ipc.aal  test_ipc.conf  test_mrp_dbus.aal  test_mrp_dbus.conf  test_mrp_dbus.py  test_mrp_libresource.aal  test_mrp_libresource.conf  test_mrp_libresource.py  test_mrp_libresource_dbuslike.aal  test_mrp_libresource_dbuslike.conf  test_mrp_libresource_dbuslike.py  test_mrp_resource.aal  test_mrp_resource.conf  test_mrp_resource.py  test_mrp_resource_native.aal  test_mrp_resource_native.conf  test_mrp_resource_native.py  test_mrp_resource_native_callbacks.py  test_mrp_resource_native_helpers.py  test_mrp_unix_sockets.aal  (+9 more)
tests/conf/: define_applications_zones_resources.lua  murphy-lua.conf  murphy-ref.lua
tests/ctypeslib/: create_mrp_ctypes.sh
tests/swig/: build_mappings.sh  clean_mappings.sh  mrp_resource_api.i  swig_testing.py
tests/wip/: first_python_test.aal  first_python_test.conf  first_test.cc.aal  welp.c
